 -- Disallow the train command from being used on itself.
 -- Add protection to @chownall that victim be a player object.
 -- Fix uninitialized variable in HASRXLEVEL(). It should have used
    'executor' instead of 'player'.
 -- Fix time_t handling for 64-bit machines. Timezones could be wrong
    for dates earlier than Jan 1 1970 on 64-bit Unix.
 -- Fix @hook for goto command. Being unable to move also affected the
    ability to use other commands. Reported by K hall.
 -- Added checking to convsecs() to return '#-1 INVALID DATE" if first
    argument is outside the supported range.
 -- All but the last part of very Long lines from the network were
    discarded when for very long lines, only the first part should be
    saved.  Not a crashing bug.
 -- Server should not attempt to @clone Created and Modified attributes.
 -- Fix single-character case in pos(). It would never return success.
    Bug introduced in 2.6. It does not appear in 2.4.
 -- Change isdbref() to return '0' instead of '#-1 ISDBEF EXPECTS...'
 -- Fix ANSI overflow bug in ANSI_String_Copy() introduced by using an
    unsigned size_t in place of a signed 'int'. Bug introduced in 2.6.
 -- Add 'other half' of buffer overflow protection to a case in
    process_cmdent().  Without the other half, the first half causes a
    crash instead of prventing it.  Found and fixed by Sparks.
 -- Remove double evaluation from distribute() and sql().
 -- Save/Restore global registers while executing @descformat.


Performance Enhancements:
~~~~~~~~~~~~~~~~~~~~~~~~

 -- In MEMORY_BASED, avoid malloc() call each time an attribute is
    added to an object.
 -- Optimize atr_add_raw_LEN() to reduce Firan load time from 40 seconds
    to 15 seconds (which includes firan.db, mail.db, and comsys.db).
    This translates to something upward of 28 MB/s.

Cosmetic Changes:
~~~~~~~~~~~~~~~~


Miscellaneous:
~~~~~~~~~~~~~
 -- Add mux_fopen() utility function to replace direct use of fopen().